# assimilate

./: .gitmodules  404.html  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  atom.xml  index.html
.github/workflows/: ci.yml  jekyll-gh-pages.yml  snyk-container.yml
authors/: index.html
authors/aaran-xu/: index.html
authors/public/: index.html
authors/rustaceans/: index.html
blog/: index.html
blog/hello-world/: index.html
blog/markdown-syntax/: index.html
blog/math-typesetting/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/placeholder-text/: index.html
blog/say-hello-to-zola-doks/: index.html
docs/: index.html
docs/contributing/: index.html
docs/contributing/code-of-conduct/: index.html
docs/contributing/how-to-contribute/: index.html
docs/getting-started/: index.html
docs/getting-started/introduction/: index.html
docs/getting-started/quick-start/: index.html
docs/help/: index.html
docs/help/faq/: index.html
privacy-policy/: index.html
src/: application.rs  commands.rs  config.rs  lib.rs
src/commands/: chart.rs  start.rs
tests/: acceptance.rs  acceptance_chart.rs
website/: config.toml
