[package]
name = "assimilate"
authors = []
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
dirs = "4.0.0"
directories = "4.0.1"
relative-path = { version = "1.7.3", features = ["serde"] }
once_cell = "1.2"
gumdrop = { version = "0.8.1", features = ["default_expr"] }
assert_cmd = { version = "2.0.8", features = ["color", "color-auto"] }
predicates = { version = "2.1.5", features = ["color", "color-auto"] }
openssl-sys = "0.9.80"
openssl = "0.10.45"

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"

#[workspace]
#abscissa = { path = "workspace/abscissa" }
